Обновил index.html
Добавил описание, пара строчек текста.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="hero-image">
       <div class="container">
-        <h1 class="heading">Опознанный Енот</h1>
+        <h1 class="heading">Человек</h1>
         <p>Junior верстальщик</p>
       </div> 
     </section>
@@ -29,9 +29,11 @@
           <img src="files/user.jpg" height="536" alt="Фотография Неопознанного Енота">
         </figure>
         <h3>Пара слов о себе</h3>
-        <p>Текст с парой слов о себе.</p>
+        <p>Начинающий верстальщик. Начал заниматься этим всем в декабре 2019.</p>
         <h3>Чем могу быть полезен</h3>
-        <p>Текст о том, чем могу быть полезен.</p>
+        <p>Пока-что, как и любой другой начинающий верстальщик, я абослютно бесполезен, так как освоив HTML,
+          без CSS он будет скудно выглядеть, про JS вообще молчу. Да, знаниями по CSS я обладаю куда большими, чем HTML, но от
+          этого легче не становиться. Буду улучшать свои навыки и в будущем научусь многому.</p>
       </div> 
     </section>
 
